# DriveSyncV2

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Readme.fr.md  Readme.md
app/: main.cpp
cloud/: GoogleDriveClient.cpp  GoogleDriveClient.h  main.cpp
config/: Config.h
fileManager/: LocalSettings.cpp  LocalSettings.h  file_io.cpp  file_io.h  main.cpp
sync/: SyncManager.cpp  SyncManager.h  main.cpp
test/: main.cpp
utils/: Logger.cpp  Logger.h  main.cpp  test_logger
watcher/: FolderWatcher.cpp  FolderWatcher.h
